# Hackithon

./: pyproject.toml
backend/: pyproject.toml
backend/app/: dataset.json  models.py
backend/app/api/: main.py
backend/app/api/routes/: topics.py
backend/resources/: dataset.json  main.py  morp.py  topics.json
frontend/: package-lock.json  package.json
frontend/public/: europe.json
frontend/src/: routeTree.gen.ts
frontend/src/components/: MapComponent.tsx  VirtualGrid.tsx
frontend/src/components/Common/: Navbar.tsx
frontend/src/components/Topics/: TopicsTable.tsx
frontend/src/routes/: _layout.tsx
frontend/src/routes/_layout/: city-detail.tsx  city-page.tsx  index.tsx
